fix: adjust gap calculation in question component for improved spacing

--- a/apps/web-next/src/features/information/components/faq/faq.module.scss
+++ b/apps/web-next/src/features/information/components/faq/faq.module.scss
@@ -13,7 +13,7 @@
 .question {
   display: flex;
   flex-direction: column;
-  gap: calc((g.$padding-xsm * 2.5) / 2);
+  gap: calc(g.$padding-xsm * 1.25);
 
   @media (max-width: g.$breakpoint-laptop) {
     gap: g.$padding-xxsm;
